# rfq-intelligence-engine

./: Dockerfile  Dockerfile.flair-service  Dockerfile.pipeline-service  Dockerfile.training  README.md  app.py  main.py  pyproject.toml
data/ner/: dev.txt  train.txt
src/: main.py
src/config/: settings.py
src/dataflow/: pipeline.py
src/flair_service/: app.py  flair_client.py  model_loader.py
src/inference/: app.py  inference_service.py
src/ml/: dataset.py  llm_client.py  llm_confidence.py  predictor.py  trainer.py
src/models/: trade.py
src/pipeline/: pipeline.py
src/preprocessing/: cleaner.py
src/rules/: extractor.py
